# train-ticket-management-system

./: !!!开发规范.md  .gitignore  CMakeLists.txt  README.md  UNIFIED_TECHNICAL_SPEC_CN.tex  requirements.md  worksplit.md
database/: schema_v1.sql
include/: database_manager.h  login_dialog.h  login_manager.h  main_window.h
src/: main.cpp
src/database/: database_manager.cpp
src/login/: login_dialog.cpp  login_manager.cpp
src/ui/: main_window.cpp
tests/: CMakeLists.txt  database_init_smoke_test.cpp
